--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">有红包</string>
+    <string name="user_tips">使用说明</string>
+    <string name="user_tips_details">(声明:本App绝不收集你的个人信息，如有担心请卸载)</string>
+    <string name="enable_accessibility">启用辅助功能</string>
+    <string name="disable_accessibility">关闭抢红包</string>
+    <string name="running_state">抢红包功能已打开，你现在可以去做其他事情啦，我会给你自动抢的~</string>
 </resources>
