--- a/LuckyMoney/app/src/main/res/values/strings.xml
+++ b/LuckyMoney/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="disable_accessibility">关闭抢红包</string>
     <string name="running_state">抢红包功能已打开，你现在可以去做其他事情啦，我会给你自动抢的~</string>
     <string name="enable_notification">启用通知开关</string>
+    <string name="get_lucky">领取红包</string>
 </resources>
